# youtube

./: .gitignore  Makefile  README.md  pyproject.toml
pytube/: pytube-cli.py
pytube_cli/: main_script.py  pytube_cli.py  pytube_main.py  pytube_parse.py  user_interaction.py
pytube_cli/scripts/: pytube_cli.py
youtube/: Readme.md  cli.py  debug.py  files.py  format.py  loader.py  main_script.py  mpeg.py  parser.py  parsers.py  scraper.py  user_interaction.py  youtube_parser.py
youtube/scripts/: youtube.py
