[tool.poetry]
name = "n8creator_automation"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]
packages = [
  { include = "youtube" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytube = "^10.0.0"
ffmpeg-python = "^0.2.0"
flake8 = "^3.8.4"
ffmpy = "^0.2.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[tool.poetry.scripts]
youtube = "youtube.scripts.youtube:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
