[tool.poetry]
name = "n8creator_automation"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]
packages = [
  { include = "youtube" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytube = "^10.0.0"
ffmpy = "^0.2.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.1"

[tool.poetry.scripts]
youtube = "youtube.scripts.youtube:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
