[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]
packages = [
  { include = "youtube" },
]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
ffmpy = "^0.3.0"
ipython = "^8.7.0"
pytubefix = "^6.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.1"

[tool.poetry.scripts]
youtube = "youtube.scripts.youtube:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
